--- a/hof.css
+++ b/hof.css
@@ -1,42 +1,46 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300|Roboto:100');
 
 html,body {
-	width: 100%;
+  width: 100%;
   padding: 0px;
   margin: 0;
+  background-color: #f8fcf2;
 }
 
 .nav {
-  padding: 10px;
   text-align: center;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bolder;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-  background: #000000;
+  background: #173e43;
+  animation: 1s linear 0s 1 fadeInDown;
 }
 
 .nav ul{
-	text-align: center;
-	position: relative;
-	list-style-type: none;
-	display: inline-block;
+  text-align: center;
+  position: relative;
+  list-style-type: none;
+  display: inline-block;
 }
 
 .nav li{
-	float:left;
+  float:left;
 }
 
 #link {
   transition: 0.4s;
-  color: #ffffff;
+  color: white;
   font-size: 30px;
+  font-weight: bolder;
   padding-left: 40px;
   padding-right: 40px;
   text-decoration: none;
 }
 
 #link:hover {
-  background-color: #ffffff;
-  color: #000000;
+  background-color: #3fb0ac;
+  color: white;
+  font-weight: bolder;
   padding-right: 40px;
   padding-left: 40px;
   padding-top: 10px;
@@ -44,58 +48,117 @@ html,body {
 }
 
 #heading {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 40px;
-	font-weight: bold;
-	text-align: center;
-	animation: 2s ease-out 0s 1 slideInFromLeft;
-}
-
-@keyframes slideInFromLeft {
-  0% {
-    transform: translateX(-100%);
-  }
-  100% {
-    transform: translateX(0);
-  }
+  font-family: 'Roboto', sans-serif;
+  font-size: 40px;
+  font-weight: bolder;
+  text-align: center;
+  animation: 2s ease-in-out 0s 1 fadeIn;
 }
 
 .hof{
-	text-align: center;
+  text-align: center;
 }
 
 .hof ul{
      width: 90%;
-	list-style-type: none;
-	text-align: center;
-	display: inline-block;
-	position: relative;
+  list-style-type: none;
+  text-align: center;
+  display: inline-block;
+  position: relative;
 }
 
 .hof li{
-	float: left;
-	padding-right: 4%;
+  float: left;
+  padding-right: 5.5%;
+  padding-left: 6%;
 }
 
 .cap{
-	display: block;
-	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 20px;
-	font-weight: bold;
-	padding-top: 10px;
+  display: block;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bolder;
+  font-size: 25px;
+  padding-top: 10px;
+  animation: 4s linear 0s 1 flipInX;
 }
 
 .hof img{
-	animation: 3s linear 0s 1 fadeIn;
-	width: 250px;
-	height: 250px;
+  animation: 1.5s linear 0s 1 zoomIn;
+  width: 250px;
+  height: 250px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 100%;
+}
+
+/**Animations **/
+
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: none;
+  }
 }
 
 @keyframes fadeIn {
   from {
     opacity: 0;
   }
+
+  0% {
+    opacity: 0;
+  }
+  
+  75%{
+    opacity: 0;
+  }
+
+  100%{
+    opacity: 1;
+  }
+
   to {
+    opacity: 1;
+  }
+}
+
+@keyframes flipInX {
+  from {
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+
+  40% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    animation-timing-function: ease-in;
+  }
+
+  60% {
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    opacity: 1;
+  }
+
+  80% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+  }
+
+  to {
+    transform: perspective(400px);
+  }
+}
+
+@keyframes zoomIn {
+  from {
+    opacity: 0;
+    transform: scale3d(.3, .3, .3);
+  }
+
+  50% {
     opacity: 1;
   }
 }
